# cnet

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
cnet-cli/: cclip.hpp  main.cpp
docs/: winsock.md
example/: CMakeLists.txt  example.cpp  uri-example.cpp
includes/: http_client.h  http_message.h  http_method.h  ssl_client.h  tcp_client.h  uri.h
src/: http_client.cpp  ssl_client.cpp  tcp_client.cpp  uri.cpp
